syntax = "proto3";
option java_package = "com.blog.proto";
option java_outer_classname = "BlogStore";

enum OwnerType{
    OwnerDefault = 0;
    User = 1;
    Group = 2;
}
enum Status {
    StatusDefault = 0;
    StatusActive = 1;
    StatusDeleted = 2;
}
enum ReturnCode {
    UNKNOWN_RETURN_CODE = 0;
    RETURN_OK = 1;
    RETURN_ERROR = 2;
    RETURN_USER_EXIST = 50;
    RETURN_USER_NAME_BLANK = 51;
    RETURN_USER_PASSWORD_BLANK = 52;
    RETURN_USER_PHONE_EXIST = 53;
    RETURN_USER_EMAIL_EXIST = 54;


}

message FileStore {
    message StoreTree {
        int32 ownerType = 1;
        int32 ownerId = 2;
        string fileName = 3;
        string contentType = 4;
        int64 fileSize = 5;
        oneof Playload {
            HashList treeHahs = 6;
            HashList blobHash = 7;
        }
        int64 createTime = 10;
        int64 updateTime = 11;
        int32 committerId = 12;
    }
    message HashList {
        repeated string hsah = 1;
    }
}

message Result {
    ReturnCode code = 1;
    string msg = 2;
}
message ResultList {
    repeated Result esult = 1;
    ReturnCode code = 2;
    string msg = 3;
}

message UserItem {
    int32 userId = 1;
    string username = 2;
    string nickname = 3;
    string email = 4;
    string phone = 5;
    int64 birthday = 6;

    Status status = 20;
}
message UserList {
    repeated UserItem items = 1;
}